fixed header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ h3 {
     /* margin-top: -10px !important; */
 }
     a.btn-w {
-    font-size: 25px;
+    font-size: 24px;
     /* padding-top: 37px; */
 }
     a.btn-w i {
@@ -434,7 +434,7 @@ float:left !important;
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   top: 0;
   left: 0;
 background-color: #fff;
